[gd_scene load_steps=4 format=3 uid="uid://bfm5cfawr0g2"]

[ext_resource type="Theme" uid="uid://c5y30tb5md0qt" path="res://scenes/PlayerPanel.tres" id="1_tw2ul"]
[ext_resource type="Script" path="res://scripts/FriendItem.gd" id="1_up4we"]
[ext_resource type="Theme" uid="uid://5hj6pfvbsvck" path="res://ActionButtonTheme.tres" id="2_fisu7"]

[node name="FriendItem" type="Control"]
custom_minimum_size = Vector2(480, 120)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1440.0
offset_bottom = -960.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_tw2ul")
script = ExtResource("1_up4we")

[node name="Background" type="Panel" parent="."]
custom_minimum_size = Vector2(480, 120)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AvatarDisplay" type="TextureRect" parent="."]
custom_minimum_size = Vector2(120, 120)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
expand_mode = 1

[node name="UserInfo" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(360, 60)
layout_mode = 0
offset_left = 120.0
offset_right = 480.0
offset_bottom = 60.0

[node name="Username" type="Label" parent="UserInfo"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2

[node name="StatusIndicator" type="TextureRect" parent="UserInfo"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2

[node name="MessageButton" type="Button" parent="."]
custom_minimum_size = Vector2(360, 60)
layout_mode = 0
offset_left = 120.0
offset_top = 60.0
offset_right = 480.0
offset_bottom = 120.0
theme = ExtResource("2_fisu7")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Message"
